sum method added
